<resources>
    <string name="app_name">LoginService</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="password">Password</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="por_manuel">Por Manuel</string>
    <string name="titulo_1">Titulo 1</string>
</resources>
