<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/foto_image"
            android:layout_width="64dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@mipmap/ic_launcher"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/menu_button"
            android:layout_toEndOf="@+id/foto_image"
            >

                <TextView
                    android:id="@+id/titulo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/titulo_1"/>

                <TextView
                    android:id="@+id/usuario_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titulo_text"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/por_manuel"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/usuario_text">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ubicacion_text"
                        android:text="@string/ubicacion"/>
                </android.support.v7.widget.CardView>
        </RelativeLayout>


        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_menu_dots"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_alignParentEnd="true"
            android:background="@null"/>



    </RelativeLayout>
</android.support.v7.widget.CardView>
